CMSC430_Project2/Project 2/parser.output
Terminals unused in grammar

    TYPE
    ENDCASE
    NOTOP


Rules useless in parser due to conflicts

   74 case_s: OTHERS ARROW CHARACTER IDENTIFIER CHARACTER
   76       | CASE type ARROW

  123 expression_s: type operator CHARACTER


State 14 conflicts: 17 shift/reduce, 14 reduce/reduce
State 28 conflicts: 1 shift/reduce
State 37 conflicts: 16 shift/reduce, 14 reduce/reduce
State 38 conflicts: 16 shift/reduce, 1 reduce/reduce
State 40 conflicts: 17 shift/reduce, 13 reduce/reduce
State 45 conflicts: 17 shift/reduce, 13 reduce/reduce
State 49 conflicts: 6 shift/reduce
State 54 conflicts: 16 shift/reduce, 19 reduce/reduce
State 55 conflicts: 18 shift/reduce, 15 reduce/reduce
State 57 conflicts: 6 reduce/reduce
State 67 conflicts: 17 shift/reduce, 13 reduce/reduce
State 68 conflicts: 4 shift/reduce
State 70 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 75 conflicts: 16 shift/reduce, 23 reduce/reduce
State 77 conflicts: 17 shift/reduce, 23 reduce/reduce
State 79 conflicts: 19 shift/reduce, 26 reduce/reduce
State 90 conflicts: 17 shift/reduce, 12 reduce/reduce
State 92 conflicts: 15 shift/reduce, 23 reduce/reduce
State 93 conflicts: 5 shift/reduce, 1 reduce/reduce
State 94 conflicts: 17 shift/reduce, 23 reduce/reduce
State 95 conflicts: 17 shift/reduce
State 98 conflicts: 15 shift/reduce
State 100 conflicts: 16 shift/reduce, 13 reduce/reduce
State 101 conflicts: 15 shift/reduce, 1 reduce/reduce
State 103 conflicts: 2 shift/reduce
State 106 conflicts: 12 shift/reduce, 13 reduce/reduce
State 113 conflicts: 2 shift/reduce
State 115 conflicts: 1 shift/reduce
State 119 conflicts: 7 reduce/reduce
State 120 conflicts: 4 shift/reduce
State 122 conflicts: 1 shift/reduce
State 124 conflicts: 4 shift/reduce
State 125 conflicts: 17 shift/reduce, 14 reduce/reduce
State 126 conflicts: 16 shift/reduce
State 128 conflicts: 17 shift/reduce, 13 reduce/reduce
State 130 conflicts: 17 shift/reduce, 14 reduce/reduce
State 132 conflicts: 17 shift/reduce, 13 reduce/reduce
State 136 conflicts: 37 reduce/reduce
State 145 conflicts: 17 shift/reduce, 13 reduce/reduce
State 146 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 155 conflicts: 15 shift/reduce
State 156 conflicts: 2 shift/reduce
State 157 conflicts: 5 shift/reduce
State 158 conflicts: 17 shift/reduce
State 164 conflicts: 4 shift/reduce, 1 reduce/reduce
State 165 conflicts: 1 shift/reduce
State 173 conflicts: 10 shift/reduce
State 174 conflicts: 17 shift/reduce, 14 reduce/reduce
State 180 conflicts: 17 shift/reduce, 14 reduce/reduce
State 186 conflicts: 1 shift/reduce
State 187 conflicts: 17 shift/reduce, 13 reduce/reduce
State 193 conflicts: 17 shift/reduce, 14 reduce/reduce
State 206 conflicts: 17 shift/reduce, 22 reduce/reduce
State 207 conflicts: 17 shift/reduce, 13 reduce/reduce
State 209 conflicts: 1 shift/reduce
State 214 conflicts: 17 shift/reduce, 13 reduce/reduce
State 216 conflicts: 10 shift/reduce
State 217 conflicts: 5 reduce/reduce
State 225 conflicts: 15 shift/reduce
State 227 conflicts: 16 shift/reduce, 19 reduce/reduce
State 229 conflicts: 12 shift/reduce, 13 reduce/reduce
State 234 conflicts: 17 shift/reduce, 14 reduce/reduce
State 235 conflicts: 17 shift/reduce, 13 reduce/reduce
State 236 conflicts: 17 shift/reduce, 13 reduce/reduce
State 238 conflicts: 2 shift/reduce
State 246 conflicts: 1 shift/reduce
State 248 conflicts: 1 shift/reduce
State 250 conflicts: 1 shift/reduce
State 253 conflicts: 12 shift/reduce
State 258 conflicts: 16 shift/reduce
State 265 conflicts: 14 shift/reduce
State 267 conflicts: 17 shift/reduce, 13 reduce/reduce
State 272 conflicts: 16 shift/reduce
State 274 conflicts: 17 shift/reduce, 14 reduce/reduce
State 278 conflicts: 4 reduce/reduce
State 279 conflicts: 17 shift/reduce, 27 reduce/reduce
State 280 conflicts: 17 shift/reduce, 22 reduce/reduce
State 281 conflicts: 1 shift/reduce
State 284 conflicts: 5 reduce/reduce
State 289 conflicts: 17 shift/reduce, 23 reduce/reduce
State 291 conflicts: 4 shift/reduce
State 293 conflicts: 16 shift/reduce
State 302 conflicts: 1 shift/reduce
State 305 conflicts: 17 shift/reduce, 14 reduce/reduce
State 307 conflicts: 16 shift/reduce, 22 reduce/reduce
State 308 conflicts: 15 shift/reduce, 1 reduce/reduce
State 310 conflicts: 5 shift/reduce, 5 reduce/reduce
State 312 conflicts: 15 shift/reduce, 1 reduce/reduce
State 321 conflicts: 12 shift/reduce, 23 reduce/reduce
State 331 conflicts: 17 shift/reduce, 13 reduce/reduce
State 335 conflicts: 4 shift/reduce
State 336 conflicts: 4 shift/reduce, 1 reduce/reduce
State 338 conflicts: 1 shift/reduce
State 340 conflicts: 5 reduce/reduce
State 348 conflicts: 4 shift/reduce
State 355 conflicts: 17 shift/reduce, 13 reduce/reduce
State 356 conflicts: 20 reduce/reduce
State 357 conflicts: 2 shift/reduce
State 358 conflicts: 9 reduce/reduce
State 360 conflicts: 4 shift/reduce, 1 reduce/reduce
State 362 conflicts: 17 shift/reduce, 14 reduce/reduce
State 366 conflicts: 17 shift/reduce, 13 reduce/reduce
State 369 conflicts: 17 shift/reduce
State 371 conflicts: 17 shift/reduce, 14 reduce/reduce
State 374 conflicts: 17 shift/reduce, 14 reduce/reduce
State 376 conflicts: 18 shift/reduce, 14 reduce/reduce
State 377 conflicts: 15 shift/reduce, 1 reduce/reduce
State 378 conflicts: 1 shift/reduce, 1 reduce/reduce
State 383 conflicts: 5 shift/reduce
State 386 conflicts: 17 shift/reduce, 14 reduce/reduce
State 388 conflicts: 12 shift/reduce, 13 reduce/reduce
State 391 conflicts: 6 shift/reduce
State 393 conflicts: 1 shift/reduce
State 399 conflicts: 17 shift/reduce, 15 reduce/reduce
State 403 conflicts: 1 shift/reduce
State 404 conflicts: 12 shift/reduce
State 405 conflicts: 4 shift/reduce
State 406 conflicts: 6 reduce/reduce
State 407 conflicts: 1 shift/reduce
State 413 conflicts: 17 shift/reduce, 14 reduce/reduce
State 415 conflicts: 4 shift/reduce
State 427 conflicts: 1 shift/reduce
State 436 conflicts: 17 shift/reduce, 13 reduce/reduce
State 437 conflicts: 17 shift/reduce, 13 reduce/reduce


Grammar

    0 $accept: function $end

    1 function: function_header optional_variable body

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type ';'
    3                | FUNCTION IDENTIFIER parameters ',' parameters ',' parameters RETURNS type ';'
    4                | FUNCTION IDENTIFIER parameters ',' parameters RETURNS type ';'
    5                | error ';'

    6 optional_variable: optional_variable variable
    7                  | ε

    8 variable: parameters IS statement_ ';'
    9         | parameters IS parameters ';'
   10         | parameters OF type IS statement_
   11         | parameters IS expression_s operator type ';'
   12         | parameters IS type ';'
   13         | parameters IS expression_s ';'
   14         | parameters IS statement_ parameters IS type ';'
   15         | parameters IS operator type ';'
   16         | error ';'

   17 parameters: '(' parameters ')'
   18           | IDENTIFIER ':' type
   19           | IDENTIFIER ':'
   20           | IDENTIFIER type
   21           | IDENTIFIER ':' CHARACTER
   22           | CHARACTER type IDENTIFIER
   23           | CHARACTER IDENTIFIER CHARACTER
   24           | ε

   25 type: INTEGER
   26     | LIST
   27     | OF
   28     | LEFT
   29     | RIGHT
   30     | CHARACTER
   31     | REAL
   32     | REAL_LITERAL
   33     | INT_LITERAL
   34     | BOOLEAN

   35 body: BEGIN_ statement_ END ';'

   36 statement_: statement ';'
   37           | WHEN expression ';'
   38           | WHEN expression ',' expression ':' expression ';'
   39           | WHEN expression_s
   40           | IF expression THEN statement_ ELSIF expression THEN statement_ ELSIF expression THEN statement_ ELSE statement_ ENDIF
   41           | IF expression THEN statement_ ELSIF expression THEN statement_ ELSIF expression THEN statement_ ELSE statement_ ENDIF ';'
   42           | IF expression THEN IF expression THEN statement_ ELSIF expression THEN statement_ ELSE statement_ ENDFOLD ';' ENDIF ';' ELSE expression ENDFOLD ';' ENDIF
   43           | IF expression THEN IF expression THEN statement_ ELSIF expression THEN statement_ ELSE expression ENDFOLD ';' ENDIF ';' ELSE expression ENDFOLD ';' ENDIF ';'
   44           | IF expression THEN statement_ ELSE statement_ ENDIF ';'
   45           | SWITCH IDENTIFIER IS statement_1 ENDSWITCH ';'
   46           | SWITCH IDENTIFIER IS statement_1 ENDSWITCH ';' statement_1 ENDSWITCH ';'
   47           | SWITCH IDENTIFIER '(' expression ')' IS statement_1 ENDSWITCH ';'
   48           | IDENTIFIER '(' expression ')' operator '(' expression ')' ';'
   49           | error ';'

   50 statement: expression
   51          | REDUCE operator reductions ENDREDUCE
   52          | IDENTIFIER type operator '(' statement ')'
   53          | expression_s operator '(' expression_s ')'
   54          | IDENTIFIER '(' type ')' operator IDENTIFIER '(' type ')'
   55          | expression_s type operator '(' expression ')' operator type PERCENT expression_s expression_s
   56          | ε

   57 statement_1: case_s ';'
   58            | case_s ';' case_s ';'
   59            | case_s ';' case_s ';' case_s ';'
   60            | case_s ';' case_s ';' OTHERS ARROW statement ';'
   61            | case_s operator type operator expression_s ';'
   62            | ε

   63 case_s: CASE type ARROW SWITCH IDENTIFIER IS CASE expression_s ';' OTHERS expression_s
   64       | CASE type ARROW IDENTIFIER type operator '(' expression_s ')' ENDFOLD
   65       | CASE type ARROW IDENTIFIER type operator IDENTIFIER ENDFOLD
   66       | CASE statement ARROW CHARACTER IDENTIFIER type
   67       | CASE type ARROW CHARACTER IDENTIFIER
   68       | CASE type ARROW CHARACTER IDENTIFIER CHARACTER
   69       | CASE type ARROW type
   70       | CASE type ARROW statement
   71       | CASE statement ARROW statement
   72       | OTHERS ARROW CHARACTER IDENTIFIER type
   73       | OTHERS ARROW IDENTIFIER expression_s IDENTIFIER
   74       | OTHERS ARROW CHARACTER IDENTIFIER CHARACTER
   75       | OTHERS ARROW type
   76       | CASE type ARROW
   77       | CASE ARROW type
   78       | CASE type ARROW IDENTIFIER
   79       | ε

   80 operator: ADDOP
   81         | RELOP
   82         | ANDOP
   83         | MULOP

   84 reductions: reductions statement_
   85           | ε

   86 expression: expression_s
   87           | IDENTIFIER
   88           | type
   89           | expression_s expression_s
   90           | expression_s ANDOP expression_s
   91           | expression_s operator expression_s
   92           | expression_s '(' expression_s ')'
   93           | expression_s IDENTIFIER
   94           | expression type operator '(' expression ')' operator type PERCENT expression CARET type CARET type
   95           | expression_s ANDOP expression_s CHARACTER expression_s ANDOP CHARACTER '(' type operator type ')' CHARACTER type operator type ANDOP type operator type ',' type ':' type
   96           | expression OROP relation
   97           | expression ',' expression ',' expression ',' expression
   98           | expression ',' expression ',' expression
   99           | CHARACTER expression_s ANDOP expression_s ANDOP CHARACTER '(' expression_s CHARACTER expression_s ')'
  100           | expression_s CHARACTER expression_s ',' IDENTIFIER operator expression_s operator expression_s operator type ':' type
  101           | expression_s ANDOP expression_s ',' expression_s ':' expression_s
  102           | expression_s ',' expression_s expression_s expression_s ':' type
  103           | IDENTIFIER '(' type ')' operator expression_s
  104           | expression_s ',' CHARACTER expression_s ':' expression_s
  105           | IDENTIFIER type operator '(' expression_s ')'
  106           | ε

  107 expression_s: IDENTIFIER
  108             | operator type operator
  109             | type operator type
  110             | CHARACTER IDENTIFIER CHARACTER
  111             | IDENTIFIER operator operator type
  112             | type ',' type ',' type
  113             | type ',' type ',' type ',' type
  114             | type operator IDENTIFIER
  115             | IDENTIFIER operator type
  116             | IDENTIFIER operator IDENTIFIER
  117             | IDENTIFIER PERCENT type
  118             | IDENTIFIER CARET type
  119             | CARET type CARET type
  120             | IDENTIFIER CARET type PERCENT type
  121             | IDENTIFIER type operator
  122             | IDENTIFIER type
  123             | type operator CHARACTER
  124             | type ARROW IDENTIFIER PERCENT type
  125             | ARROW type
  126             | ε

  127 relation: relation RELOP term
  128         | term

  129 term: term ADDOP remop
  130     | remop

  131 remop: remop REMOP factor
  132      | factor

  133 factor: factor MULOP expop
  134       | expop

  135 expop: primary EXPOP expop
  136      | primary

  137 primary: '(' expression ')'
  138        | INT_LITERAL
  139        | REAL_LITERAL
  140        | BOOL_LITERAL
  141        | CHARACTER
  142        | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 17 47 48 52 53 54 55 64 92 94 95 99 103 105 137
    ')' (41) 17 47 48 52 53 54 55 64 92 94 95 99 103 105 137
    ',' (44) 3 4 38 95 97 98 100 101 102 104 112 113
    ':' (58) 18 19 21 38 95 100 101 102 104
    ';' (59) 2 3 4 5 8 9 11 12 13 14 15 16 35 36 37 38 41 42 43 44 45 46 47 48 49 57 58 59 60 61 63
    error (256) 5 16 49
    IDENTIFIER (258) 2 3 4 18 19 20 21 22 23 45 46 47 48 52 54 63 64 65 66 67 68 72 73 74 78 87 93 100 103 105 107 110 111 114 115 116 117 118 120 121 122 124 142
    TYPE (259)
    INT_LITERAL (260) 33 138
    REAL_LITERAL (261) 32 139
    BOOL_LITERAL (262) 140
    CHARACTER (263) 21 22 23 30 66 67 68 72 74 95 99 100 104 110 123 141
    ARROW (264) 60 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 124 125
    CASE (265) 63 64 65 66 67 68 69 70 71 76 77 78
    ELSE (266) 40 41 42 43 44
    ENDCASE (267)
    ENDIF (268) 40 41 42 43 44
    IF (269) 40 41 42 43 44
    OTHERS (270) 60 63 72 73 74 75
    REAL (271) 31
    THEN (272) 40 41 42 43 44
    ELSIF (273) 40 41 42 43
    ADDOP (274) 80 129
    MULOP (275) 83 133
    RELOP (276) 81 127
    ANDOP (277) 82 90 95 99 101
    OROP (278) 96
    NOTOP (279)
    REMOP (280) 131
    EXPOP (281) 135
    WHEN (282) 37 38 39
    CARET (283) 94 118 119 120
    PERCENT (284) 55 94 117 120 124
    BEGIN_ (285) 35
    BOOLEAN (286) 34
    END (287) 35
    ENDREDUCE (288) 51
    FUNCTION (289) 2 3 4
    INTEGER (290) 25
    IS (291) 8 9 10 11 12 13 14 15 45 46 47 63
    REDUCE (292) 51
    RETURNS (293) 2 3 4
    SWITCH (294) 45 46 47 63
    ENDSWITCH (295) 45 46 47
    OF (296) 10 27
    LIST (297) 26
    LEFT (298) 28
    RIGHT (299) 29
    ENDFOLD (300) 42 43 64 65


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    function (52)
        on left: 1
        on right: 0
    function_header (53)
        on left: 2 3 4 5
        on right: 1
    optional_variable (54)
        on left: 6 7
        on right: 1 6
    variable (55)
        on left: 8 9 10 11 12 13 14 15 16
        on right: 6
    parameters (56)
        on left: 17 18 19 20 21 22 23 24
        on right: 2 3 4 8 9 10 11 12 13 14 15 17
    type (57)
        on left: 25 26 27 28 29 30 31 32 33 34
        on right: 2 3 4 10 11 12 14 15 18 20 22 52 54 55 61 63 64 65 66 67 68 69 70 72 75 76 77 78 88 94 95 100 102 103 105 108 109 111 112 113 114 115 117 118 119 120 121 122 123 124 125
    body (58)
        on left: 35
        on right: 1
    statement_ (59)
        on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49
        on right: 8 10 14 35 40 41 42 43 44 84
    statement (60)
        on left: 50 51 52 53 54 55 56
        on right: 36 52 60 66 70 71
    statement_1 (61)
        on left: 57 58 59 60 61 62
        on right: 45 46 47
    case_s (62)
        on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
        on right: 57 58 59 60 61
    operator (63)
        on left: 80 81 82 83
        on right: 11 15 48 51 52 53 54 55 61 64 65 91 94 95 100 103 105 108 109 111 114 115 116 121 123
    reductions (64)
        on left: 84 85
        on right: 51 84
    expression (65)
        on left: 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106
        on right: 37 38 40 41 42 43 44 47 48 50 55 94 96 97 98 137
    expression_s (66)
        on left: 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126
        on right: 11 13 39 53 55 61 63 64 73 86 89 90 91 92 93 95 99 100 101 102 103 104 105
    relation (67)
        on left: 127 128
        on right: 96 127
    term (68)
        on left: 129 130
        on right: 127 128 129
    remop (69)
        on left: 131 132
        on right: 129 130 131
    factor (70)
        on left: 133 134
        on right: 131 132 133
    expop (71)
        on left: 135 136
        on right: 133 134 135
    primary (72)
        on left: 137 138 139 140 141 142
        on right: 135 136


State 0

    0 $accept: • function $end

    error     shift, and go to state 1
    FUNCTION  shift, and go to state 2

    function         go to state 3
    function_header  go to state 4


State 1

    5 function_header: error • ';'

    ';'  shift, and go to state 5


State 2

    2 function_header: FUNCTION • IDENTIFIER parameters RETURNS type ';'
    3                | FUNCTION • IDENTIFIER parameters ',' parameters ',' parameters RETURNS type ';'
    4                | FUNCTION • IDENTIFIER parameters ',' parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 6


State 3

    0 $accept: function • $end

    $end  shift, and go to state 7


State 4

    1 function: function_header • optional_variable body

    $default  reduce using rule 7 (optional_variable)

    optional_variable  go to state 8


State 5

    5 function_header: error ';' •

    $default  reduce using rule 5 (function_header)


State 6

    2 function_header: FUNCTION IDENTIFIER • parameters RETURNS type ';'
    3                | FUNCTION IDENTIFIER • parameters ',' parameters ',' parameters RETURNS type ';'
    4                | FUNCTION IDENTIFIER • parameters ',' parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 9
    CHARACTER   shift, and go to state 10
    '('         shift, and go to state 11

    $default  reduce using rule 24 (parameters)

    parameters  go to state 12


State 7

    0 $accept: function $end •

    $default  accept


State 8

    1 function: function_header optional_variable • body
    6 optional_variable: optional_variable • variable

    error       shift, and go to state 13
    IDENTIFIER  shift, and go to state 9
    CHARACTER   shift, and go to state 10
    BEGIN_      shift, and go to state 14
    '('         shift, and go to state 11

    IS  reduce using rule 24 (parameters)
    OF  reduce using rule 24 (parameters)

    variable    go to state 15
    parameters  go to state 16
    body        go to state 17


State 9

   18 parameters: IDENTIFIER • ':' type
   19           | IDENTIFIER • ':'
   20           | IDENTIFIER • type
   21           | IDENTIFIER • ':' CHARACTER

    INT_LITERAL   shift, and go to state 18
    REAL_LITERAL  shift, and go to state 19
    CHARACTER     shift, and go to state 20
    REAL          shift, and go to state 21
    BOOLEAN       shift, and go to state 22
    INTEGER       shift, and go to state 23
    OF            shift, and go to state 24
    LIST          shift, and go to state 25
    LEFT          shift, and go to state 26
    RIGHT         shift, and go to state 27
    ':'           shift, and go to state 28

    type  go to state 29


State 10

   22 parameters: CHARACTER • type IDENTIFIER
   23           | CHARACTER • IDENTIFIER CHARACTER

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 18
    REAL_LITERAL  shift, and go to state 19
    CHARACTER     shift, and go to state 20
    REAL          shift, and go to state 21
    BOOLEAN       shift, and go to state 22
    INTEGER       shift, and go to state 23
    OF            shift, and go to state 24
    LIST          shift, and go to state 25
    LEFT          shift, and go to state 26
    RIGHT         shift, and go to state 27

    type  go to state 31


State 11

   17 parameters: '(' • parameters ')'

    IDENTIFIER  shift, and go to state 9
    CHARACTER   shift, and go to state 10
    '('         shift, and go to state 11

    $default  reduce using rule 24 (parameters)

    parameters  go to state 32


State 12

    2 function_header: FUNCTION IDENTIFIER parameters • RETURNS type ';'
    3                | FUNCTION IDENTIFIER parameters • ',' parameters ',' parameters RETURNS type ';'
    4                | FUNCTION IDENTIFIER parameters • ',' parameters RETURNS type ';'

    RETURNS  shift, and go to state 33
    ','      shift, and go to state 34


State 13

   16 variable: error • ';'

    ';'  shift, and go to state 35


State 14

   35 body: BEGIN_ • statement_ END ';'

    error         shift, and go to state 36
    IDENTIFIER    shift, and go to state 37
    INT_LITERAL   shift, and go to state 18
    REAL_LITERAL  shift, and go to state 19
    CHARACTER     shift, and go to state 38
    ARROW         shift, and go to state 39
    IF            shift, and go to state 40
    REAL          shift, and go to state 21
    ADDOP         shift, and go to state 41
    MULOP         shift, and go to state 42
    RELOP         shift, and go to state 43
    ANDOP         shift, and go to state 44
    WHEN          shift, and go to state 45
    CARET         shift, and go to state 46
    BOOLEAN       shift, and go to state 22
    INTEGER       shift, and go to state 23
    REDUCE        shift, and go to state 47
    SWITCH        shift, and go to state 48
    OF            shift, and go to state 24
    LIST          shift, and go to state 25
    LEFT          shift, and go to state 26
    RIGHT         shift, and go to state 27

    IDENTIFIER    [reduce using rule 126 (expression_s)]
    INT_LITERAL   [reduce using rule 106 (expression)]
    INT_LITERAL   [reduce using rule 126 (expression_s)]
    REAL_LITERAL  [reduce using rule 106 (expression)]
    REAL_LITERAL  [reduce using rule 126 (expression_s)]
    CHARACTER     [reduce using rule 106 (expression)]
    CHARACTER     [reduce using rule 126 (expression_s)]
    ARROW         [reduce using rule 126 (expression_s)]
    REAL          [reduce using rule 106 (expression)]
    REAL          [reduce using rule 126 (expression_s)]
    ADDOP         [reduce using rule 126 (expression_s)]
    MULOP         [reduce using rule 126 (expression_s)]
    RELOP         [reduce using rule 126 (expression_s)]
    ANDOP         [reduce using rule 126 (expression_s)]
    OROP          reduce using rule 106 (expression)
    OROP          [reduce using rule 126 (expression_s)]
    CARET         [reduce using rule 126 (expression_s)]
    BOOLEAN       [reduce using rule 106 (expression)]
    BOOLEAN       [reduce using rule 126 (expression_s)]
    INTEGER       [reduce using rule 106 (expression)]
    INTEGER       [reduce using rule 126 (expression_s)]
    OF            [reduce using rule 106 (expression)]
    OF            [reduce using rule 126 (expression_s)]
    LIST          [reduce using rule 106 (expression)]
    LIST          [reduce using rule 126 (expression_s)]
    LEFT          [reduce using rule 106 (expression)]
    LEFT          [reduce using rule 126 (expression_s)]
    RIGHT         [reduce using rule 106 (expression)]
    RIGHT         [reduce using rule 126 (expression_s)]
    ';'           reduce using rule 56 (statement)
    ';'           [reduce using rule 106 (expression)]
    ';'           [reduce using rule 126 (expression_s)]
    ','           reduce using rule 106 (expression)
    ','           [reduce using rule 126 (expression_s)]
    '('           reduce using rule 126 (expression_s)

    type          go to state 49
    statement_    go to state 50
    statement     go to state 51
    operator      go to state 52
    expression    go to state 53
    expression_s  go to state 54


State 15

    6 optional_variable: optional_variable variable •

    $default  reduce using rule 6 (optional_variable)


State 16

    8 variable: parameters • IS statement_ ';'
    9         | parameters • IS parameters ';'
   10         | parameters • OF type IS statement_
   11         | parameters • IS expression_s operator type ';'
   12         | parameters • IS type ';'
   13         | parameters • IS expression_s ';'
   14         | parameters • IS statement_ parameters IS type ';'
   15         | parameters • IS operator type ';'

    IS  shift, and go to state 55
    OF  shift, and go to state 56


State 17

    1 function: function_header optional_variable body •

    $default  reduce using rule 1 (function)


State 18

   33 type: INT_LITERAL •

    $default  reduce using rule 33 (type)


State 19

   32 type: REAL_LITERAL •

    $default  reduce using rule 32 (type)


State 20

   30 type: CHARACTER •

    $default  reduce using rule 30 (type)


State 21

   31 type: REAL •

    $default  reduce using rule 31 (type)


State 22
